<resources>
    <string name="app_name" translatable="false">GrowingUp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="strvalEBInfoBanner">Enter your baby\'s info</string>
    <string name="strvalEBInfoDetails">Please enter you baby\'s info. Only you and authorized personnel will be able to see this information.</string>
    <string name="strvalEBFullName">Full Name</string>
    <string name="strvalEBFullNameBox">Enter baby\'s full name</string>
    <string name="strvalEBGender">Baby\'s gender</string>
    <string name="strvalEBMale">Male</string>
    <string name="strvalEBFemale">Female</string>
    <string name="strvalEBGn">Rather not say</string>
    <string name="strvalEPInfoBanner">Enter your personal info</string>
    <string name="strvalEPInfoDetails">Please enter you personal info. Don\'t worry, this information will only be used if we want to contact you for something important.</string>
    <string name="strvalTVFullName">Full Name</string>
    <string name="strvalEPFullName">Enter you full name</string>
    <string name="strvalTVPhoneNumber">Phone Number</string>
    <string name="strvalEPPhoneNumber">Enter you phone number</string>
    <string name="strvalTVRelation">Relationship to the baby</string>
    <string name="strvalEPMother">Mother</string>
    <string name="strvalEPFather">Father</string>
    <string name="strvalEPOther">Other</string>
    <string name="strvalBTNBack">Back</string>
    <string name="strvalBTNNext">Next</string>
    <string name="strvalEBBTNSubmit">Submit</string>
    <string name="strvalPlaceholder" translatable="false">placeholder</string>
    <string name="strFASyringe" translatable="false"></string>
    <string name="openai_api_key" translatable="false">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</string>
    <string name="openai_system_call" translatable="false">Your name will be Nanny, and you will be taking on the role of a nanny to help parents take care of their babies. When a user starts a conversation with you, please ask for the baby\'s age and any specific concerns the parent may have. If the user asks anything that is not strictly related to baby care (such as jokes, weather, politics, maths, programming, codes), politely ignore it and respond with something like: \"I\'m sorry, I\'m here to help with baby-related concerns. Do you have any questions or concerns about your baby\'s health, feeding, or sleeping habits?\" This will help keep the conversation on track and provide the best possible assistance to the parents.</string>
    <string name="Nanny_greeting">Your personal assistant for baby care to help you with any questions or concerns you have about your baby.\nPowered by OpenAI</string>
    <string name="NannyName" translatable="false">Nanny</string>
    <string name="strvalSILK" translatable="false">සිංහල</string>
    <string name="strvalENEN" translatable="false">English</string>
    <string name="srtvalLangTitle">Language</string>
    <string name="strvalLangIntro">Please select your preferred language from below.</string>
    <string name="strvalLoginView">Welcome!</string>
    <string name="strvalLoginTextView3">Bringing up a baby is a journey filled with precious moments. Let us help you cherish every step of the way. Log in to continue,</string>
    <string name="strvalBTNSignIn">Sign in with Google</string>
    <string name="strvaledtEBDOB">Click here to select a date</string>
    <string name="strvaledtEBHeight">Baby\'s birth height in</string>
    <string name="strvaledtEBWeight">Baby\'s birth weight in</string>
    <string name="strvalTxtEBDOB">Date of birth</string>
    <string name="strvalTxtEBHeight">Birth height</string>
    <string name="strvalTxtEBWeight">Birth weight</string>
    <string name="strvalLogoutExit">Exit</string>
    <string name="strvalLogoutExitTxt">Do you want to exit from GrowingUp?</string>
    <string name="strvalLogoutYes">Yes</string>
    <string name="strvalLogoutNo">No</string>
    <string name="strvalGRPtext1">CURRENT BMI:</string>
    <string name="strvalTxtBMI">BMI</string>
    <string name="strvalGRPTitle1">BMI(KG/M^2)</string>
    <string name="strvalTxtDEV">DEVIATION:</string>
    <string name="strvalTxtStatus">STATUS:</string>
    <string name="strvalTxtPast">PAST:</string>
    <string name="strvalCard1Inner">CURRENT HEIGHT:</string>
    <string name="strvalCard2Inner">DEVIATION:</string>
    <string name="strvalCard3Inner">STATUS:</string>
    <string name="strvalCard4Inner">PAST:</string>
    <string name="strvalTitleHeight">HEIGHT</string>
    <string name="strvalGRPTitleHeight">HEIGHT(CM)</string>
    <string name="strvalGRPHTitle">HEIGHT</string>
    <string name="strvalGRPTitleTxt">HEIGHT(CM)</string>
    <string name="strvalGRPHText1">CURRENT HEIGHT:</string>
    <string name="strvalGRPHText2">DEVIATION:</string>
    <string name="strvalGRPHText3">STATUS:</string>
    <string name="strvalGRPHText4">PAST:</string>
    <string name="strvalEditTxtName">Enter your name</string>
    <string name="strvalEditTextBirthdate">Enter your birth date</string>
    <string name="strvalBTNGetStarted">Get Started</string>
    <string name="strvalGRPWTitle">WEIGHT(KG)</string>
    <string name="strvalGRPWText1">CURRENT WEIGHT:</string>
    <string name="strvalGRPWText2">DEVIATION:</string>
    <string name="strvalGRPWText3">STATUS:</string>
    <string name="strvalGRPWText4">PAST:</string>
    <string name="strvalGRPWBTNTitle">WEIGHT</string>
    <string name="strvalEPRegText">New user registration screen</string>
    <string name="strvalEPRegTextName">Enter your name</string>
    <string name="strvalEPRegTextBD">Enter your birth date</string>
    <string name="strvalBTNEPReg">Get Started</string>
    <string name="strvaltxtEBDOB">Date of birth</string>
    <string name="strvaledtEBHeightTxt">Birth height</string>
    <string name="strvaltxtEBWeight">Birth weight</string>
    <string name="strvalFPTextView1">Body Mass Index</string>
    <string name="strvalFPTextView2">Height</string>
    <string name="strvalFPTextView3">Weight</string>
    <string name="strvalCardViewAgeTxt">Age</string>
    <string name="strvalCardViewAgeVal">2y 5m</string>
    <string name="strvalCardViewHeightTxt">Height</string>
    <string name="strvalCardViewHeightVal">92.1cm</string>
    <string name="strvalCardViewWeightTxt">Weight</string>
    <string name="strvalCardViewWeightVal">5kg</string>
    <string name="strvalCardViewBMITxt">BMI</string>
    <string name="strvalCardViewBMIVal">69</string>
    <string name="strvalTxtUpComing">Upcoming Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>